--- a/WireFrame/index.html
+++ b/WireFrame/index.html
@@ -8,15 +8,28 @@
         <link href="style.css" rel="stylesheet" type="text/css"/>
     </head>
     <h>WebLayout</h>
-    <body>
+
+    <body> 
+        <div class="Grid"></div>
+        <div class="P1"></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo consectetur lorem sed consectetur. Nullam molestie, augue nec aliquam maximus, arcu lectus mollis libero, at sodales libero nibh id odio. Aliquam malesuada blandit odio vel gravida. Nam maximus tempor eros et viverra. Nulla mattis eu lacus ac molestie.</p>
-    <div class="IMGS">
-    <img src="S1.png" alt="s1" width= 30% height= 30%><figcaption>Caption 1</figcaption>
-    <img src="S2.png" alt="s2" width= 30% height= 30%><figcaption>Caption 2</figcaption>
-    <img src="S3.png" alt="s3" width= 20% height= 30%><figcaption>Caption 3</figcaption>
     </div>
+        <div class="I1">
+    <img src="S1.png" alt="s1" style="width: 15%; "> <p>Caption 1</p>
+</div>
+    <div class= "I2">
+    <img src="S2.png" alt="s2" style="width: 15%; " ><p>Caption 2</p>
+</div>
+<div class="I3">
+    <img src="S3.png" alt="s3" style="width: 15%; "><p>Caption 3</p>
+    </div>
+    <div class="P2">
     <p1>Vestibulum nisi eros, consequat auctor aliquet ac, pharetra vitae elit. Cras congue porttitor felis ac blandit. Ut imperdiet ex non sem consequat, vitae fermentum ipsum efficitur. Fusce ornare velit ac fermentum accumsan. Integer laoreet vitae orci at consequat. Donec at condimentum augue. Nullam non congue mi, non sodales massa. Mauris eleifend orci a interdum euismod. Sed efficitur quis metus non dictum.</p1>
-    <p2><br>Mauris scelerisque turpis id aliquet porttitor. <br>Pellentesque congue scelerisque molestie. Aenean ut justo lectus. <br>Etiam vitae velit at tellus consequat congue in quis dui. <br>Aenean a ligula eu neque lacinia molestie.<br> Donec quis neque et ex lacinia fringilla a quis erat.<br> Vivamus porta ante id metus malesuada, eget ultrices elit ornare.<br> In hac habitasse platea dictumst.</p2>
-    <script="script.js"></script>
+</div>
+<div class="P3"></div> 
+<p2><br>Mauris scelerisque turpis id aliquet porttitor. <br>Pellentesque congue scelerisque molestie. Aenean ut justo lectus. <br>Etiam vitae velit at tellus consequat congue in quis dui. <br>Aenean a ligula eu neque lacinia molestie.<br> Donec quis neque et ex lacinia fringilla a quis erat.<br> Vivamus porta ante id metus malesuada, eget ultrices elit ornare.<br> In hac habitasse platea dictumst.</p2>
+</div>    
+</div> 
+<script="script.js"></script>
     </body>
 </html>
